fixed spacing between dockbar and content and updated colors on permissions button

--- a/themes/pat270-min-theme/docroot/_diffs/css/custom.css
+++ b/themes/pat270-min-theme/docroot/_diffs/css/custom.css
@@ -10,6 +10,10 @@ html, body {
 	height: 100%;
 }
 
+html > .lfr-dockbar-pinned {
+	padding-top: 31px;
+}
+
 a {
 	color: #5B677D;
 	text-decoration: underline;
@@ -108,9 +112,9 @@ input[value="Checkout"], input[value="Delete"], input[value="Cancel"] {
 }
 
 input[value="Permissions"] {
-	background: #CD5252;
+	background: #BB2C2C;
 	&:hover, &:focus {
-		background: #AA3838;
+		background: #AC2727;
 	}
 }
 
@@ -140,8 +144,9 @@ input[value="New Message"] {
 /* ------- layout styles -------- */
 
 #WrapperForBg {
-	background: white;
-	margin-top: -20px;
+	background: #FFF;
+	margin-top: 0;
+/*	margin-top: -20px;*/
 	min-height: 100%;
 }
 
@@ -225,9 +230,11 @@ input[value="New Message"] {
 /* ---------- Very Top Menu ---------- */
 
 #very_top_menu {
-	background: black;
+	background: #000;
 	color: #999;
-	margin-top: 20px;
+	margin-top: 0;
+/*	margin-top: 20px;*/
+	min-height: 15px;
 	padding: 10px 15px;
 	text-align: right;
 
